Fix code tag readability in alert messagepane

--- a/src/assets/sass/modules/_alerts.scss
+++ b/src/assets/sass/modules/_alerts.scss
@@ -153,6 +153,11 @@ li.information {
     a {
         color: $color-text-inverse;
     }
+
+    code {
+        border-color: rgba(255, 255, 255, 0.66);
+        background: transparent;
+    }
 }
 
 /*
